# mini-demand-side-platform

./: LICENSE  README.md  docker-compose.yml  makefile
data/: .gitignore
docs/: activate-notebook-environment.md  db-ads.md  db-ctr.md  ml-storage.md
notebooks/: Pipfile  research.ipynb
services/bidding-server/: _dockerfile  dockerfile  pyproject.toml
services/bidding-server/app/: config.py  get_ads.py  logger.py
services/bidding-server/tests/: test_bidding_strategy.py  test_get_ads.py
services/bidding-server/tests/test_data/: test_ads.py
services/db-object-storage/: dockerfile
services/db-olap/: dockerfile  init-user-db.sh
services/db-oltp/: dockerfile  init-user-db.sh
services/ml-serving/: Pipfile  dockerfile  pyproject.toml
services/ml-serving/app/: config.py  main.py  utils.py
services/ml-training/: dockerfile  makefile  pyproject.toml
services/ml-training/app/: config.py  data_pipeline.py  logger.py  main.py  train.py
services/ml-training/tests/: test_train.py
services/ml-training/tests/test_data/: test_data.py
services/notebooks/: pyproject.toml
src/bidding-server/: Pipfile  dockerfile
src/bidding-server/app/: bidding_strategy.py  config.py  main.py
src/bidding-server/tests/: test_utils.py
src/db/ads/: dockerfile  init-user-db.sh
src/ml/serving/: Pipfile  dockerfile  makefile
src/ml/serving/app/: config.py  main.py
src/ml/storage/: dockerfile
src/ml/storage/data/default-model/: metrics.json
src/ml/storage/default-model/: model.pickle
src/ml/training/: Pipfile
src/ml/training/app/: config.py  data_pipeline.py  feature_mapping.py  main.py  model_saver.py  train.py
src/ml/training/tests/: test_data_pipeline.py  test_model_saver.py  test_train.py
src/ml/training/tests/test_data/: db_mocker.py  test_data.py
