[tool.poetry]
name = "ml-serving"
version = "0.1.0"
description = ""
authors = ["ray <wuhaohsiang1992@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_serving"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.93.0"
minio = "^7.1.13"
uvicorn = "^0.20.0"
rich = "^13.3.2"
scikit-learn = "1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
