[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["ray <wuhaohsiang1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "1.1.1"
jupyterlab = "^3.6.1"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
